--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
 @import "./css/reset.css";
+@import "./css/typeography.css";
+@import "./css/layouts.css";
+@import "./css/colors.css";
 
-.container {}
