--- a/css/typeography.css
+++ b/css/typeography.css
@@ -1,5 +1,5 @@
 /* file contains fonts, weights, line heights, sizes, and styles for headings/body text */
 
-.body {
-    font-size: 20px;
+h1 {
+    font-size: 4em;
 }
