Add styling for main window and button wrapper

--- a/css/colors.css
+++ b/css/colors.css
@@ -3,3 +3,11 @@
 .container {
     background-color: gray;
 }
+
+.main-screen {
+    background-color: white;
+}
+
+.wrapper {
+    background-color: white;
+}
