--- a/css/layouts.css
+++ b/css/layouts.css
@@ -14,6 +14,20 @@ h1 {
 }
 
 .container {
-    width: 35em;
-    height: 50em;
+    width: 500px;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.main-screen {
+    width: 450px;
+    height: 150px;
+}
+
+.wrapper {
+    width: 450px;
+    height: 450px;
 }
