--- a/css/layouts.css
+++ b/css/layouts.css
@@ -27,7 +27,9 @@ h1 {
     height: 150px;
 }
 
-.wrapper {
+.key-wrapper {
     width: 450px;
     height: 450px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
