--- a/css/layouts.css
+++ b/css/layouts.css
@@ -32,16 +32,17 @@ h1 {
     height: 450px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    padding: 10px;
 }
 
 /* individul key manipulation */
 
-.ac-sign {
-    grid-column-start: ;
+.operator {
+    font-size: 2em;
 }
 
 .equal-sign {
-    background-color: #2e86c0;
     grid-row-start: 4;
     grid-row-end: 6;
     grid-column-start: 4;
