--- a/css/colors.css
+++ b/css/colors.css
@@ -1,5 +1,9 @@
 /* file contains colors used throughout page */
 
+.container, button {
+    border-radius: 10px;
+}
+
 .container {
     background-color: rgb(224, 224, 224);
 }
